--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "RiZoeL X Spam",
+      "name": "😾🐜 SPAMBOT2.0 🐧🐯",
       "description": "MOST POWERFUL + STABLE SPAM USERBOTS",
       "logo": "https://telegra.ph/file/db194f99e15db50f43c72.jpg",
       "keywords": [
@@ -9,7 +9,7 @@
         "RiZoeLXSpam",
         "SpamBots"
       ],   
-   "repository": "https://github.com/MrRizoel/RiZoeLXSpam",
+   "repository": "https://github.com/SUKHPAL443/SPAMBOT2.0",
    "addons": [
       {
          "options": {
