--- a/app.json
+++ b/app.json
@@ -6,10 +6,10 @@
         "telegram",
         "telethon",
         "telegram-bot",
-        "RiZoeLXSpam",
+        "THEBROTHERHOODSPAMMERS",
         "SpamBots"
       ],   
-   "repository": "https://github.com/SUKHPAL443/SPAMBOT2.0",
+   "repository": "https://github.com/SUKHPAL443/THEBROTHERHOODSPAMMERS",
    "addons": [
       {
          "options": {
