--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "😾🐜 SPAMBOT2.0 🐧🐯",
+      "name": "😾🐜 THEBROTHERHOODSPAMMERS 🐧🐯",
       "description": "MOST POWERFUL + STABLE SPAM USERBOTS",
       "logo": "https://telegra.ph/file/db194f99e15db50f43c72.jpg",
       "keywords": [
