--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-      "name": "😾🐜 THEBROTHERHOODSPAMMERS 🐧🐯",
+      "name": "😾🐜 TBHSPAMMER  🐧🐯",
       "description": "MOST POWERFUL + STABLE SPAM USERBOTS",
       "logo": "https://telegra.ph/file/ef6efd684ecddabd3e8f8.jpg",
       "keywords": [
         "telegram",
         "telethon",
         "telegram-bot",
-        "THEBROTHERHOODSPAMMERS",
+        "TBHSPAMMER",
         "SpamBots"
       ],   
-   "repository": "https://github.com/SUKHPAL443/THEBROTHERHOODSPAMMERS",
+   "repository": "https://github.com/SUKHPAL443/TBHSPAMMER",
    "addons": [
       {
          "options": {
